# handlingtheloop

./: .gitignore  DEPLOY.md  README.md  ROADMAP.md  deploy.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  wrangler.admin.jsonc  wrangler.jsonc
api/: audio.ts
docs/: shared-session.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/test/: cdp-run.mjs  demucs-rs-test.html  dspstems.html  index.html  node-smoke.mjs  node-stems.mjs  ortstems.html  serve-coi.mjs  serve.mjs  shot.mjs  stems.html  webgpu-diag.html
migrations/: 0001_init.sql  0002_community.sql  0003_takedowns.sql  0004_analysis.sql  0005_settings.sql  0006_cookie.sql  0007_captions.sql
server/: access.ts  accounts.ts  admin.ts  api.ts  audioProxy.ts  connections.ts  crypto.ts  db.ts  googleAuth.ts  innertube.ts  match.ts  oauth.ts  room.ts  security.test.ts  security.ts  session.ts  spotifyAuth.ts  spotifyData.ts  sync.ts  youtube.ts  ytdata.ts
src/: App.tsx  main.tsx  styles.css
src/audio/: AudioEngine.ts  Deck.ts  analyze.ts  decode.ts  pitchWorklet.ts  trackCache.ts
src/components/: CaptionBar.tsx  ChannelStrip.tsx  Crossfader.tsx  DeckControls.tsx  DeckLane.tsx  DeckView.tsx  Dialog.tsx  DockResizer.tsx  EqCurve.tsx  Explorer.tsx  Fader.tsx  KeyHelp.tsx  Knob.tsx  KnobBorder.tsx  LevelFader.tsx  LibraryPanel.tsx  MixCenter.tsx  RoomBar.tsx  SearchModal.tsx  SettingsPanel.tsx  StereoMeter.tsx  SyncPanel.tsx  TrackTable.tsx  ValueCell.tsx  Waveform.tsx  WaveformViewport.tsx  (+1 more)
worker/: admin.ts  index.ts
(+52 files in other folders)
